# Comfyui-GLM_Prompt

./: .env  README.md  __init__.py  app.py  config.json  glm.py  image_prompts.txt  pyproject.toml  requirements.txt  text_prompts.txt
node/: glm.py
