[project]
name = "glm_prompt"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["zhipuai", "Pillow", "numpy"]

[project.urls]
Repository = "https://github.com/jiandanplus/Comfyui-GLM_Prompt"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "jiandamnit"
DisplayName = "Comfyui-GLM_Prompt"
Icon = ""
includes = []
